; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_sockopt.c_export_cntr0_base.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_ip_fw_sockopt.c_export_cntr0_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_fw = type { i64, i32* }
%struct.ip_fw_bcounter0 = type { i64, i8*, i8* }
%struct.timeval = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ip_fw*, %struct.ip_fw_bcounter0*)* @export_cntr0_base to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @export_cntr0_base(%struct.ip_fw* %0, %struct.ip_fw_bcounter0* %1) #0 {
  %3 = alloca %struct.ip_fw*, align 8
  %4 = alloca %struct.ip_fw_bcounter0*, align 8
  %5 = alloca %struct.timeval, align 8
  store %struct.ip_fw* %0, %struct.ip_fw** %3, align 8
  store %struct.ip_fw_bcounter0* %1, %struct.ip_fw_bcounter0** %4, align 8
  %6 = load %struct.ip_fw*, %struct.ip_fw** %3, align 8
  %7 = getelementptr inbounds %struct.ip_fw, %struct.ip_fw* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %29

10:                                               ; preds = %2
  %11 = load %struct.ip_fw*, %struct.ip_fw** %3, align 8
  %12 = getelementptr inbounds %struct.ip_fw, %struct.ip_fw* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = call i8* @counter_u64_fetch(i32* %13)
  %15 = load %struct.ip_fw_bcounter0*, %struct.ip_fw_bcounter0** %4, align 8
  %16 = getelementptr inbounds %struct.ip_fw_bcounter0, %struct.ip_fw_bcounter0* %15, i32 0, i32 2
  store i8* %14, i8** %16, align 8
  %17 = load %struct.ip_fw*, %struct.ip_fw** %3, align 8
  %18 = getelementptr inbounds %struct.ip_fw, %struct.ip_fw* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 1
  %21 = call i8* @counter_u64_fetch(i32* %20)
  %22 = load %struct.ip_fw_bcounter0*, %struct.ip_fw_bcounter0** %4, align 8
  %23 = getelementptr inbounds %struct.ip_fw_bcounter0, %struct.ip_fw_bcounter0* %22, i32 0, i32 1
  store i8* %21, i8** %23, align 8
  %24 = load %struct.ip_fw*, %struct.ip_fw** %3, align 8
  %25 = getelementptr inbounds %struct.ip_fw, %struct.ip_fw* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.ip_fw_bcounter0*, %struct.ip_fw_bcounter0** %4, align 8
  %28 = getelementptr inbounds %struct.ip_fw_bcounter0, %struct.ip_fw_bcounter0* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  br label %29

29:                                               ; preds = %10, %2
  %30 = load %struct.ip_fw_bcounter0*, %struct.ip_fw_bcounter0** %4, align 8
  %31 = getelementptr inbounds %struct.ip_fw_bcounter0, %struct.ip_fw_bcounter0* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = icmp sgt i64 %32, 0
  br i1 %33, label %34, label %42

34:                                               ; preds = %29
  %35 = call i32 @getboottime(%struct.timeval* %5)
  %36 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load %struct.ip_fw_bcounter0*, %struct.ip_fw_bcounter0** %4, align 8
  %39 = getelementptr inbounds %struct.ip_fw_bcounter0, %struct.ip_fw_bcounter0* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = add nsw i64 %40, %37
  store i64 %41, i64* %39, align 8
  br label %42

42:                                               ; preds = %34, %29
  ret void
}

declare dso_local i8* @counter_u64_fetch(i32*) #1

declare dso_local i32 @getboottime(%struct.timeval*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
